Cambios realizados en index principal como 2 modificado

--- a/hojaDeVida/index.html
+++ b/hojaDeVida/index.html
@@ -23,7 +23,7 @@
     <div id="principal">
         <button class="scrollToBottom"> <b>Bienvenido
             <br>
-            a mi Hoja de Vida</b></button>
+            a mi Hoja de Vida 2 modificada</b></button>
     </div>
 
     <div class="izquierda">
